# Baboon

./: .gitignore  .project  CMakeLists.txt  INSTALL  README  TODO  init_Baboon.sh
example/: .gitignore  CMakeLists.txt
example/config/: Algorithm.cfg
example/include/: myProc.hh
example/marlinXml/: ShowerSplitter.xml  myProc.xml
example/src/: myProc.cc
source/: CMakeLists.txt  CMakeLists.txt_soft
source/gui/: BaboonGui.cc  CMakeLists.txt
source/gui/include/: BaboonMainFrame.hh  EventLoader.hh  EventNavigator.hh
source/gui/include/Detector/: Calorimeter.hh  CustomDetector.hh  ECal.hh  HCal.hh  TPC.hh
source/gui/include/Objects/: AnalogicCaloHit.hh  CaloHit.hh  DigitalCaloHit.hh  SemiDigitalCaloHit.hh
source/gui/src/: BaboonMainFrame.cc  EventLoader.cc  EventNavigator.cc
source/gui/src/Detector/: Calorimeter.cc  CustomDetector.cc  HCal.cc
source/gui/src/Objects/: AnalogicCaloHit.cc  CaloHit.cc  DigitalCaloHit.cc  SemiDigitalCaloHit.cc  TrackerHit.cc
source/include/: .gitignore  Exception.hh
source/include/Algorithm/: AbstractAlgorithm.hh  AlgorithmHeaders.hh  ConeBeginningAlgorithm.hh  CoreToCoreAssociationAlgorithm.hh  EventPreparation.hh  IsolationTaggingAlgorithm.hh  OverlayEventAlgorithm.hh  PCA.hh  PrincipalComponentAnalysis.hh  TrackToShowerAssociationAlgorithm.hh
source/include/Algorithm/Association/: TrackToShowerAssociationAlgorithm.hh
source/include/Algorithm/Calorimetry/: ClusterMergingAlgorithm.hh  ClusteringAlgorithm.hh  ConeBeginningAlgorithm.hh  ConnectorClusteringAlgorithm.hh  CoreFinderAlgorithm.hh  CoreToCoreAssociationAlgorithm.hh  DensityClusteringAlgorithm.hh  HoughTransformAlgorithm.hh  IsolatedHitMergingAlgorithm.hh  IsolationTaggingAlgorithm.hh  ShowerAgglomerationAlgorithm.hh  TrackFinderAlgorithm.hh  (+1 more)
source/include/Analysis/: BasicDraw.hh  InputTreeWrapper.hh  TTreeWrapper.hh
source/include/CfgParser/: CfgParser.hh  Data.hh  ParserStatus.hh  RawCfgParser.hh  Section.hh
source/include/Config/: SdhcalConfig.hh
source/include/Detector/: Calorimeter.hh  Detector.hh  SDHCAL.hh  Tracker.hh
source/include/Geometry/: Cone.hh  Cylinder.hh  Matrix.hh  Matrix3D.hh  SDHCALPrototype.hh  ThreeVector.hh
source/include/GraphicalProcessor/: GraphicalProcessor.hh  SDHCALPrototype.hh
source/include/Gui/: BaboonMainFrame.hh  EventLoader.hh  EventNavigator.hh
source/include/Managers/: AlgorithmManager.hh  AnalysisManager.hh  ClusteringManager.hh  CoreManager.hh  DetectorManager.hh  ExternInfoManager.hh  HitManager.hh  JobManager.hh  ShowerManager.hh  TrackManager.hh
source/include/MarlinProcessor/: BaboonProcessor.hh  CaloHitCreator.hh  EventDisplay.hh  EventDisplayProc.hh  GShowerSplitterProcessor.hh  OverlayEstimatorProcessor.hh  ShowerPDFProcessor.hh  ShowerSplitterProcessor.hh  TestBeamCutsProcessor.hh
source/include/Monitoring/: BaboonMonitoring.hh
source/include/Objects/: CaloHit.hh  Cluster.hh  Core.hh  Hit.hh  HitCollection.hh  HitCompositeObject.hh  ObjectConnector.hh  Shower.hh  Track.hh  TrackInfo.hh  TrackSegment.hh  TrackerHit.hh
source/include/Overlay/: HitCollectionComputer.hh  Overlayer.hh
source/include/Reconstruction/: Connector.hh  EnergyMinimizer.hh  Linear3DFit.hh  SimpleEnergyCalculator.hh  Tag.hh  WeightEnergyCalculator.hh
source/include/Utilities/: CaloHitCellHelper.hh  CaloHitHelper.hh  Globals.hh  HitCellHelper.hh  Internal.hh  Numeric.hh  ReturnValues.hh
source/include/Utils/: Converters.hh  HitComputing.hh  Numeric.hh
source/include/Xml/: XmlHelper.h  tinystr.h  tinyxml.h
source/main/: Baboon.cc  BaboonGui.cc  DrawEvent.cc  EventSelector.cc  LcioSplitFile.cc  LcioToRoot.cc  OverlayEstimator.cc  OverlayEstimatorAnalysis.cc  OverlayEvent.cc  OverlayRecoEnergy.cc  ShowerSpliter.cc
source/other/: Analyze.C  Analyze.h  ChamberAnalyzer.cxx  ChamberAnalyzer.h  Linearity_SD.C  ShowerProcessor.cc  ShowerProcessor.h  Track.cc  Track.hh  TrackAnalytique.cc  TrackAnalytique.hh  line3Dfit.C
source/src/: .gitignore
source/src/Algorithm/: ConeBeginningAlgorithm.cc  CoreToCoreAssociationAlgorithm.cc  EventPreparation.cc  IsolationTaggingAlgorithm.cc  OverlayEventAlgorithm.cc  PCA.cc  PrincipalComponentAnalysis.cc  TrackToShowerAssociationAlgorithm.cc
source/src/Analysis/: BasicDraw.cc  InputTreeWrapper.cc  TTreeWrapper.cc
source/src/CfgParser/: CfgParser.cc  CfgParserException.cc  Data.cc  ParserStatus.cc  RawCfgParser.cc  SafeCfgParser.cc  Section.cc  StrOp.cc
source/src/Config/: SdhcalConfig.cc
source/src/Detector/: Calorimeter.cc  Detector.cc  ECal.cc  SDHCAL.cc  TPC.cc  Tracker.cc
source/src/Geometry/: Cone.cc  Cylinder.cc  SDHCALPrototype.cc
source/src/GraphicalProcessor/: GraphicalProcessor.cc  SDHCALPrototype.cc
source/src/Gui/: BaboonMainFrame.cc  EventLoader.cc  EventNavigator.cc
source/src/Managers/: AlgorithmManager.cc  AnalysisManager.cc  ClusteringManager.cc  CoreManager.cc  DetectorManager.cc  ExternInfoManager.cc  HitManager.cc  JobManager.cc  ShowerManager.cc  TrackManager.cc
source/src/MarlinProcessor/: BaboonProcessor.cc  CaloHitCreator.cc  EventDisplay.cc  EventDisplayProc.cc  GShowerSplitterProcessor.cc  OverlayEstimatorProcessor.cc  ShowerPDFProcessor.cc  ShowerSplitterProcessor.cc  TestBeamCutsProcessor.cc
source/src/Monitoring/: BaboonMonitoring.cc
source/src/Objects/: CaloHit.cc  Cluster.cc  Core.cc  Hit.cc  HitCollection.cc  HitCompositeObject.cc  ObjectConnector.cc  Shower.cc  Track.cc  TrackInfo.cc  TrackSegment.cc
source/src/Overlay/: HitCollectionComputer.cc  Overlayer.cc
source/src/Reconstruction/: Connector.cc  EnergyCalculator.cc  EnergyMinimizer.cc  Linear3DFit.cc  SimpleEnergyCalculator.cc  Tag.cc  WeightEnergyCalculator.cc
source/src/Utilities/: CaloHitCellHelper.cc  CaloHitHelper.cc  HitCellHelper.cc  Internal.cc  Numeric.cc  ReturnValues.cc
source/src/Utils/: Converters.cc  HitComputing.cc  Numeric.cc
source/src/Xml/: XmlHelper.cc  tinystr.cc  tinyxml.cc  tinyxmlerror.cc  tinyxmlparser.cc
source/test/: OmpParallelEvent.cc  TestTTreeWrapper.cc  TreeReading.cc
template/: CMakeLists.txt  cfgfile.cfg  emptyProc.cc
(+76 files in other folders)
